--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.8.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipeout": "^2.3.6",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
