--- a/ios/CUDA/Info.plist
+++ b/ios/CUDA/Info.plist
@@ -45,6 +45,7 @@
 	<string></string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>MaterialCommunityIcons.ttf</string>
 		<string>AntDesign.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
