--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-html-to-pdf": "^0.11.0",
+    "react-native-modal-selector-searchable": "^2.1.4",
     "react-native-pdf": "^6.4.0",
     "react-native-permissions": "^3.1.0",
     "react-native-qrcode-scanner": "^1.5.4",
