--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.8.0",
+    "react-native-share-pdf": "^0.0.6",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-swipeout": "^2.3.6",
