--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-swipeout": "^2.3.6",
     "react-native-value-picker": "^0.1.4",
+    "react-native-wheel-picker": "^1.2.0",
+    "react-native-wheel-scrollview-picker": "^1.2.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "rn-qr-generator": "^1.2.0"
