--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/native": "^6.0.6",
+    "@types/react-native-vector-icons": "^6.4.10",
     "babel-jest": "^27.3.1",
     "eslint": "^8.1.0",
     "jest": "^27.3.1",
