--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-blob-util": "^0.13.17",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-html-to-pdf": "^0.12.0",
