--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-blob-util": "^0.13.17",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
@@ -49,6 +50,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-swipeout": "^2.3.6",
     "react-native-value-picker": "^0.1.4",
+    "react-native-webp-format": "^1.1.2",
     "react-native-wheel-scrollview-picker": "^1.2.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
