--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-selector-searchable": "^2.1.4",
+    "react-native-modalize": "^2.0.13",
     "react-native-pdf": "^6.4.0",
     "react-native-permissions": "^3.1.0",
     "react-native-qrcode-scanner": "^1.5.4",
