--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-fast-image": "^8.5.11",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-google-signin": "^2.1.1",
     "react-native-html-to-pdf": "^0.12.0",
