--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^14.2.2",
     "@react-native-firebase/auth": "^14.2.2",
     "@react-native-firebase/database": "^14.2.2",
+    "@react-native-firebase/ml": "^14.11.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
