--- a/ios/CUDA/Info.plist
+++ b/ios/CUDA/Info.plist
@@ -78,6 +78,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
